# evo-ragptor

./: .gitignore  LICENSE  README.md
assets/docs/archi/: archi.drawio
docs/: AddRagFeedback.md  AddYourData.md  Archi.md
docs/workshop/: PromptLib.md  Recommendation.md
docs/workshop/session-00/archi/: DATA.md  GEN_AI.md  TOOLS.md
docs/workshop/session-01/: LoraFineTuning.md
docs/workshop/session-02/dotnet/data-creator-api/: README.md
docs/workshop/session-02/dotnet/data-store-api/: README.md  TODO.md
src/data-tool-api/: .gitignore  README.md  pyproject.toml
src/data-tool-api/.github/: copilot-instructions.md
src/data-tool-api/app/: container.py  main.py
src/data-tool-api/app/common/logger/: exception_converter.py  interfaces.py  levels.py  mega_logger.py  message_template_processor.py  models.py
src/data-tool-api/app/common/logger/sinks/: elastic_sink.py  interface.py  uvicorn_sink.py
src/data-tool-api/app/common/middleware/: http_logger_middleware.py
src/data-tool-api/app/logging/api/: endpoints.py
src/data-tool-api/app/math/api/: endpoints.py  request_models.py
src/data-tool-api/app/math/business/: math_service.py
src/data-tool-api/app/text/api/: endpoints.py
src/data-tool-api/app/text/business/: TEXT_COMPARER.md  text_chunker.py  text_comparer.py  text_normalizer.py  text_sanitizer.py  text_vectorizer.py
src/data-tool-api/docs/: TOKEN_MAX_BY_MODEL.md
src/data-tool-api/scripts/: docker-compose-dev.yml  install.sh  run.sh  setup-dev-env.sh
src/data-tool-api/tests/math/: test_api.py  test_math_service.py
(+8 files in other folders)
