[tool.poetry]
name = "data-tool-api"
version = "0.1.0"
description = "An data tool api for AI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
pydantic = "^2.7.0"
dependency-injector = "^4.47.1"
scikit-learn = "^1.4.2"
sentence-transformers = "^2.6.1"
rapidfuzz = "^3.6.2"
elasticsearch = ">=7,<8"
structlog = "^25.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
